portage-converter/layers: Updates

--- a/portage-converter/layers/macaroni-funtoo-race12.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race12.yaml
@@ -118,6 +118,7 @@ packages:
   - app-text/xmlto:0
   - app-text/yelp-tools:0
   - app-vim/gentoo-syntax:0
+  - dev-cpp/cairomm:0
   - dev-cpp/cairomm:1
   - dev-cpp/glibmm:2
   - dev-cpp/libxmlpp:3.0
@@ -240,6 +241,7 @@ packages:
   - dev-libs/mpc:0
   - dev-libs/mpfr:0
   - dev-libs/nettle:0
+  - dev-libs/newt:0
   - dev-libs/npth:0
   - dev-libs/nspr:0
   - dev-libs/nss:0
@@ -261,6 +263,7 @@ packages:
   - dev-libs/zziplib:0
   - dev-lua/LuaBitOp:0
   - dev-lua/lpeg:0
+  - dev-lua/lua:5.3
   - dev-lua/luaexpat:0
   - dev-lua/luajson:0
   - dev-lua/luasocket:0
@@ -391,6 +394,7 @@ packages:
   - dev-python/markdown:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/packaging:0
   - dev-python/pathspec:0
   - dev-python/pluggy:0
@@ -420,6 +424,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -955,7 +960,7 @@ packages:
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
   - sys-devel/bc:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/clang-common:0
   - sys-devel/clang-runtime:13.0.0
@@ -967,6 +972,7 @@ packages:
   - sys-devel/gettext:0
   - sys-devel/gnuconfig:0
   - sys-devel/libtool:2
+  - sys-devel/lld:0
   - sys-devel/llvm-common:0
   - sys-devel/llvm:13
   - sys-devel/m4:0
@@ -983,6 +989,7 @@ packages:
   - sys-fs/fuse-exfat:0
   - sys-fs/fuse:0
   - sys-fs/fuse:3
+  - sys-fs/growpart:0
   - sys-fs/lsscsi:0
   - sys-fs/lvm2:0
   - sys-fs/mdadm:0
@@ -1039,6 +1046,7 @@ packages:
   - virtual/dev-manager:0
   - virtual/editor:0
   - virtual/eject:0
+  - virtual/fortran:0
   - virtual/glu:0
   - virtual/jack:0
   - virtual/jpeg:0
@@ -1175,6 +1183,7 @@ packages:
   - x11-drivers/xf86-input-wacom:0
   - x11-drivers/xf86-video-amdgpu:0
   - x11-drivers/xf86-video-ati:0
+  - x11-drivers/xf86-video-dummy:0
   - x11-drivers/xf86-video-fbdev:0
   - x11-drivers/xf86-video-nouveau:0
   - x11-drivers/xf86-video-vbox:0
