--- a/portage-converter/layers/macaroni-funtoo-race15.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race15.yaml
@@ -301,6 +301,7 @@ packages:
   - dev-libs/mpc:0
   - dev-libs/mpfr:0
   - dev-libs/nettle:0
+  - dev-libs/newt:0
   - dev-libs/npth:0
   - dev-libs/nspr:0
   - dev-libs/nss:0
@@ -509,6 +510,7 @@ packages:
   - dev-python/markdown:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/namespace-zope:0
   - dev-python/ovs:0
   - dev-python/packaging:0
@@ -551,6 +553,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -572,6 +575,8 @@ packages:
   - dev-python/zstandard:0
   - dev-qt/designer:5
   - dev-qt/linguist-tools:5
+  - dev-qt/linguist:5
+  - dev-qt/qdbus:5
   - dev-qt/qtbluetooth:5
   - dev-qt/qtcharts:5
   - dev-qt/qtchooser:0
@@ -602,6 +607,7 @@ packages:
   - dev-qt/qtsvg:5
   - dev-qt/qttest:5
   - dev-qt/qttranslations:5
+  - dev-qt/qtvirtualkeyboard:5
   - dev-qt/qtwayland:5
   - dev-qt/qtwebchannel:5
   - dev-qt/qtwebengine:5
@@ -846,6 +852,7 @@ packages:
   - media-libs/gd:2
   - media-libs/gexiv2:0
   - media-libs/giflib:0
+  - media-libs/glew:0
   - media-libs/glu:0
   - media-libs/graphene:0
   - media-libs/grilo:0.3
@@ -1214,7 +1221,7 @@ packages:
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
   - sys-devel/bc:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/clang-common:0
   - sys-devel/clang-runtime:13.0.0
@@ -1226,6 +1233,7 @@ packages:
   - sys-devel/gettext:0
   - sys-devel/gnuconfig:0
   - sys-devel/libtool:2
+  - sys-devel/lld:0
   - sys-devel/llvm-common:0
   - sys-devel/llvm:13
   - sys-devel/m4:0
@@ -1242,6 +1250,7 @@ packages:
   - sys-fs/fuse-exfat:0
   - sys-fs/fuse:0
   - sys-fs/fuse:3
+  - sys-fs/growpart:0
   - sys-fs/lsscsi:0
   - sys-fs/lvm2:0
   - sys-fs/mdadm:0
@@ -1461,6 +1470,7 @@ packages:
   - x11-drivers/xf86-input-wacom:0
   - x11-drivers/xf86-video-amdgpu:0
   - x11-drivers/xf86-video-ati:0
+  - x11-drivers/xf86-video-dummy:0
   - x11-drivers/xf86-video-fbdev:0
   - x11-drivers/xf86-video-nouveau:0
   - x11-drivers/xf86-video-vbox:0
