--- a/portage-converter/layers/macaroni-funtoo-race16.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race16.yaml
@@ -340,6 +340,7 @@ packages:
   - dev-libs/mpc:0
   - dev-libs/mpfr:0
   - dev-libs/nettle:0
+  - dev-libs/newt:0
   - dev-libs/npth:0
   - dev-libs/nspr:0
   - dev-libs/nss:0
@@ -553,6 +554,7 @@ packages:
   - dev-python/markdown:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/namespace-zope:0
   - dev-python/numpy:0
   - dev-python/ovs:0
@@ -597,6 +599,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -620,6 +623,7 @@ packages:
   - dev-qt/designer:5
   - dev-qt/linguist-tools:5
   - dev-qt/linguist:5
+  - dev-qt/qdbus:5
   - dev-qt/qtbluetooth:5
   - dev-qt/qtcharts:5
   - dev-qt/qtchooser:0
@@ -717,6 +721,7 @@ packages:
   - dev-util/boost-build:0
   - dev-util/byacc:0
   - dev-util/cargo-c:0
+  - dev-util/ccache:0
   - dev-util/cmake:0
   - dev-util/cmocka:0
   - dev-util/colm:0
@@ -746,6 +751,7 @@ packages:
   - dev-util/ragel:0
   - dev-util/re2c:0
   - dev-util/scons:0
+  - dev-util/shadowman:0
   - dev-util/shunit2:0
   - dev-util/source-highlight:0
   - dev-util/spirv-headers:0
@@ -1186,6 +1192,7 @@ packages:
   - net-libs/libgfbgraph:0.2
   - net-libs/libgrss:0
   - net-libs/libgsasl:0
+  - net-libs/libgssglue:0
   - net-libs/libhubbub:0
   - net-libs/libmnl:0
   - net-libs/libndp:0
@@ -1254,6 +1261,7 @@ packages:
   - net-misc/rsync:0
   - net-misc/rygel:0
   - net-misc/socat:0
+  - net-misc/sshpass:0
   - net-misc/stunnel:0
   - net-misc/vconfig:0
   - net-misc/wget:0
@@ -1361,6 +1369,7 @@ packages:
   - sys-apps/usbutils:0
   - sys-apps/util-linux:0
   - sys-apps/which:0
+  - sys-apps/xinetd:0
   - sys-auth/elogind:0
   - sys-auth/nss-mdns:0
   - sys-auth/nss-myhostname:0
@@ -1386,11 +1395,12 @@ packages:
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
   - sys-devel/bc:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/clang-common:0
   - sys-devel/clang-runtime:13.0.0
   - sys-devel/clang:13
+  - sys-devel/distcc:0
   - sys-devel/flex:0
   - sys-devel/gcc-config:0
   - sys-devel/gcc:11.3.0
@@ -1398,6 +1408,7 @@ packages:
   - sys-devel/gettext:0
   - sys-devel/gnuconfig:0
   - sys-devel/libtool:2
+  - sys-devel/lld:0
   - sys-devel/llvm-common:0
   - sys-devel/llvm:13
   - sys-devel/m4:0
@@ -1427,6 +1438,7 @@ packages:
   - sys-fs/fuse-exfat:0
   - sys-fs/fuse:0
   - sys-fs/fuse:3
+  - sys-fs/growpart:0
   - sys-fs/lsscsi:0
   - sys-fs/lvm2:0
   - sys-fs/mdadm:0
