--- a/portage-converter/layers/macaroni-funtoo-race18.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race18.yaml
@@ -77,8 +77,9 @@ packages:
   - app-editors/vscode-bin:0
   - app-editors/vscodium-bin:0
   - app-emulation/containerd:0
+  - app-emulation/docker-buildx:2
   - app-emulation/docker-cli:0
-  - app-emulation/docker-proxy:0
+  - app-emulation/docker-compose:2
   - app-emulation/docker-slim:0
   - app-emulation/docker:0
   - app-emulation/firecracker-bin:0
@@ -285,7 +286,9 @@ packages:
   - dev-db/unixODBC:0
   - dev-embedded/arduino-bin:0
   - dev-go/go-md2man:0
+  - dev-java/ant-core:0
   - dev-java/java-config:2
+  - dev-java/javatoolkit:0
   - dev-java/maven-bin:3.9
   - dev-java/openjdk-bin:11
   - dev-java/openjdk-bin:17
@@ -295,6 +298,7 @@ packages:
   - dev-java/openjdk-jre-bin:17
   - dev-java/openjdk-jre-bin:20
   - dev-java/openjdk-jre-bin:8
+  - dev-java/oracle-jdk-bin:1.8
   - dev-java/oracle-jdk-bin:17
   - dev-lang/fpc:0
   - dev-lang/go-bootstrap:0
@@ -724,6 +728,7 @@ packages:
   - dev-python/mwparserfromhell:0
   - dev-python/mysql-connector-python:0
   - dev-python/namespace-google:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/namespace-zope:0
   - dev-python/netaddr:0
   - dev-python/notify2:0
@@ -817,6 +822,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -1727,6 +1733,7 @@ packages:
   - net-print/cups:0
   - net-proxy/cntlm:0
   - net-proxy/haproxy:0
+  - net-vpn/networkmanager-fortisslvpn:0
   - net-vpn/networkmanager-openconnect:0
   - net-vpn/networkmanager-strongswan:0
   - net-vpn/networkmanager-vpnc:0
@@ -1858,7 +1865,7 @@ packages:
   - sys-devel/automake:1.16
   - sys-devel/bc:0
   - sys-devel/bin86:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/clang-common:0
   - sys-devel/clang-runtime:13.0.0
@@ -1872,6 +1879,7 @@ packages:
   - sys-devel/gettext:0
   - sys-devel/gnuconfig:0
   - sys-devel/libtool:2
+  - sys-devel/lld:0
   - sys-devel/llvm-common:0
   - sys-devel/llvm:13
   - sys-devel/m4:0
@@ -1901,6 +1909,7 @@ packages:
   - sys-fs/fuse-exfat:0
   - sys-fs/fuse:0
   - sys-fs/fuse:3
+  - sys-fs/growpart:0
   - sys-fs/lsscsi:0
   - sys-fs/lvm2:0
   - sys-fs/lxcfs:0
@@ -1991,6 +2000,7 @@ packages:
   - virtual/glu:0
   - virtual/gsasl:0
   - virtual/jack:0
+  - virtual/jdk:1.8
   - virtual/jdk:11
   - virtual/jdk:17
   - virtual/jdk:20
@@ -2306,6 +2316,7 @@ packages:
   - x11-themes/gnome-themes-standard:0
   - x11-themes/gtk-engines-adwaita:0
   - x11-themes/gtk-engines-murrine:0
+  - x11-themes/gtk-engines:2
   - x11-themes/hicolor-icon-theme:0
   - x11-themes/lxqt-themes:0
   - x11-themes/macaroni-gnome-shell-theme:0
