--- a/portage-converter/layers/macaroni-funtoo-race6.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race6.yaml
@@ -156,6 +156,7 @@ packages:
   - dev-python/mako:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/packaging:0
   - dev-python/ply:0
   - dev-python/pycparser:0
@@ -176,6 +177,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -253,6 +255,7 @@ packages:
   - media-fonts/freefont:0
   - media-fonts/freefonts:0
   - media-fonts/fs-fonts:0
+  - media-fonts/hack:0
   - media-fonts/hunkyfonts:0
   - media-fonts/intlfonts:0
   - media-fonts/ipamonafont:0
@@ -263,9 +266,12 @@ packages:
   - media-fonts/mikachan-font-ttf:0
   - media-fonts/monafont:0
   - media-fonts/nepali-fonts:0
+  - media-fonts/noto-cjk:0
+  - media-fonts/noto:0
   - media-fonts/proggy-fonts:0
   - media-fonts/sgi-fonts:0
   - media-fonts/stix-fonts:0
+  - media-fonts/symbola:0
   - media-fonts/takao-fonts:0
   - media-fonts/tengwar-fonts:0
   - media-fonts/terminus-font:0
@@ -361,7 +367,7 @@ packages:
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
   - sys-devel/bc:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/clang-common:0
   - sys-devel/clang-runtime:13.0.0
@@ -372,6 +378,7 @@ packages:
   - sys-devel/gettext:0
   - sys-devel/gnuconfig:0
   - sys-devel/libtool:2
+  - sys-devel/lld:0
   - sys-devel/llvm-common:0
   - sys-devel/llvm:13
   - sys-devel/m4:0
@@ -498,10 +505,10 @@ packages:
   - x11-libs/libXrandr:0
   - x11-libs/libXrender:0
   - x11-libs/libXt:0
+  - x11-libs/libXtst:0
   - x11-libs/libXv:0
   - x11-libs/libXvMC:0
   - x11-libs/libXxf86vm:0
-  - x11-libs/libXtst
   - x11-libs/libdrm:0
   - x11-libs/libfontenc:0
   - x11-libs/libpciaccess:0
