--- a/portage-converter/layers/macaroni-funtoo-race8.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race8.yaml
@@ -189,6 +189,7 @@ packages:
   - dev-python/mako:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/packaging:0
   - dev-python/ply:0
   - dev-python/pycairo:0
@@ -211,6 +212,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -312,6 +314,7 @@ packages:
   - media-fonts/proggy-fonts:0
   - media-fonts/sgi-fonts:0
   - media-fonts/stix-fonts:0
+  - media-fonts/symbola:0
   - media-fonts/takao-fonts:0
   - media-fonts/tengwar-fonts:0
   - media-fonts/terminus-font:0
@@ -426,7 +429,7 @@ packages:
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
   - sys-devel/bc:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/clang-common:0
   - sys-devel/clang-runtime:13.0.0
@@ -437,6 +440,7 @@ packages:
   - sys-devel/gettext:0
   - sys-devel/gnuconfig:0
   - sys-devel/libtool:2
+  - sys-devel/lld:0
   - sys-devel/llvm-common:0
   - sys-devel/llvm:13
   - sys-devel/m4:0
