--- a/portage-converter/layers/macaroni-funtoo-race10.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race10.yaml
@@ -93,6 +93,7 @@ packages:
   - app-text/xmlto:0
   - app-text/yelp-tools:0
   - app-vim/gentoo-syntax:0
+  - dev-cpp/cairomm:0
   - dev-cpp/cairomm:1
   - dev-cpp/tbb:0
   - dev-cpp/yaml-cpp:0
@@ -165,6 +166,7 @@ packages:
   - dev-libs/libdaemon:0
   - dev-libs/libdnet:0
   - dev-libs/libebml:0
+  - dev-libs/libedit:0
   - dev-libs/libev:0
   - dev-libs/libevdev:0
   - dev-libs/libevent:0
@@ -205,6 +207,7 @@ packages:
   - dev-libs/mpc:0
   - dev-libs/mpfr:0
   - dev-libs/nettle:0
+  - dev-libs/newt:0
   - dev-libs/npth:0
   - dev-libs/nspr:0
   - dev-libs/nss:0
@@ -222,6 +225,7 @@ packages:
   - dev-libs/xxhash:0
   - dev-lua/LuaBitOp:0
   - dev-lua/lpeg:0
+  - dev-lua/lua:5.3
   - dev-lua/luaexpat:0
   - dev-lua/luajson:0
   - dev-lua/luasocket:0
@@ -287,6 +291,7 @@ packages:
   - dev-python/markdown:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/packaging:0
   - dev-python/ply:0
   - dev-python/psutil:0
@@ -311,6 +316,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -731,7 +737,7 @@ packages:
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
   - sys-devel/bc:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/clang-common:0
   - sys-devel/clang-runtime:13.0.0
@@ -743,6 +749,7 @@ packages:
   - sys-devel/gettext:0
   - sys-devel/gnuconfig:0
   - sys-devel/libtool:2
+  - sys-devel/lld:0
   - sys-devel/llvm-common:0
   - sys-devel/llvm:13
   - sys-devel/m4:0
@@ -759,6 +766,7 @@ packages:
   - sys-fs/fuse-exfat:0
   - sys-fs/fuse:0
   - sys-fs/fuse:3
+  - sys-fs/growpart:0
   - sys-fs/lsscsi:0
   - sys-fs/lvm2:0
   - sys-fs/mdadm:0
@@ -812,6 +820,7 @@ packages:
   - virtual/dev-manager:0
   - virtual/editor:0
   - virtual/eject:0
+  - virtual/fortran:0
   - virtual/glu:0
   - virtual/jpeg:0
   - virtual/krb5:0
@@ -943,6 +952,7 @@ packages:
   - x11-drivers/xf86-input-wacom:0
   - x11-drivers/xf86-video-amdgpu:0
   - x11-drivers/xf86-video-ati:0
+  - x11-drivers/xf86-video-dummy:0
   - x11-drivers/xf86-video-fbdev:0
   - x11-drivers/xf86-video-nouveau:0
   - x11-drivers/xf86-video-vbox:0
