--- a/portage-converter/layers/macaroni-funtoo-race14.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race14.yaml
@@ -51,6 +51,7 @@ packages:
   - app-eselect/eselect-cdparanoia:0
   - app-eselect/eselect-ctags:0
   - app-eselect/eselect-fontconfig:0
+  - app-eselect/eselect-lib-bin-symlink:0
   - app-eselect/eselect-notify-send:0
   - app-eselect/eselect-pinentry:0
   - app-eselect/eselect-postgresql:0
@@ -142,6 +143,7 @@ packages:
   - app-text/xmlto:0
   - app-text/yelp-tools:0
   - app-vim/gentoo-syntax:0
+  - dev-cpp/cairomm:0
   - dev-cpp/cairomm:1
   - dev-cpp/glibmm:2
   - dev-cpp/libxmlpp:3.0
@@ -275,6 +277,7 @@ packages:
   - dev-libs/mpc:0
   - dev-libs/mpfr:0
   - dev-libs/nettle:0
+  - dev-libs/newt:0
   - dev-libs/npth:0
   - dev-libs/nspr:0
   - dev-libs/nss:0
@@ -289,6 +292,7 @@ packages:
   - dev-libs/sord:0
   - dev-libs/tinyxml2:0
   - dev-libs/tinyxml:0
+  - dev-libs/totem-pl-parser:0
   - dev-libs/vala-common:0
   - dev-libs/wayland-protocols:0
   - dev-libs/wayland:0
@@ -297,6 +301,7 @@ packages:
   - dev-libs/zziplib:0
   - dev-lua/LuaBitOp:0
   - dev-lua/lpeg:0
+  - dev-lua/lua:5.3
   - dev-lua/luaexpat:0
   - dev-lua/luajson:0
   - dev-lua/luasocket:0
@@ -449,6 +454,7 @@ packages:
   - dev-python/markdown:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/packaging:0
   - dev-python/pathspec:0
   - dev-python/pbr:0
@@ -482,6 +488,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -501,6 +508,8 @@ packages:
   - dev-python/zstandard:0
   - dev-qt/designer:5
   - dev-qt/linguist-tools:5
+  - dev-qt/linguist:5
+  - dev-qt/qdbus:5
   - dev-qt/qtbluetooth:5
   - dev-qt/qtcharts:5
   - dev-qt/qtchooser:0
@@ -531,6 +540,7 @@ packages:
   - dev-qt/qtsvg:5
   - dev-qt/qttest:5
   - dev-qt/qttranslations:5
+  - dev-qt/qtvirtualkeyboard:5
   - dev-qt/qtwayland:5
   - dev-qt/qtwebchannel:5
   - dev-qt/qtwebengine:5
@@ -755,6 +765,7 @@ packages:
   - media-libs/gavl:0
   - media-libs/gd:2
   - media-libs/giflib:0
+  - media-libs/glew:0
   - media-libs/glu:0
   - media-libs/graphene:0
   - media-libs/grilo:0.3
@@ -1072,7 +1083,7 @@ packages:
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
   - sys-devel/bc:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/clang-common:0
   - sys-devel/clang-runtime:13.0.0
@@ -1084,6 +1095,7 @@ packages:
   - sys-devel/gettext:0
   - sys-devel/gnuconfig:0
   - sys-devel/libtool:2
+  - sys-devel/lld:0
   - sys-devel/llvm-common:0
   - sys-devel/llvm:13
   - sys-devel/m4:0
@@ -1100,6 +1112,7 @@ packages:
   - sys-fs/fuse-exfat:0
   - sys-fs/fuse:0
   - sys-fs/fuse:3
+  - sys-fs/growpart:0
   - sys-fs/lsscsi:0
   - sys-fs/lvm2:0
   - sys-fs/mdadm:0
@@ -1161,6 +1174,7 @@ packages:
   - virtual/dev-manager:0
   - virtual/editor:0
   - virtual/eject:0
+  - virtual/fortran:0
   - virtual/freedesktop-icon-theme:0
   - virtual/glu:0
   - virtual/jack:0
@@ -1304,6 +1318,7 @@ packages:
   - x11-drivers/xf86-input-wacom:0
   - x11-drivers/xf86-video-amdgpu:0
   - x11-drivers/xf86-video-ati:0
+  - x11-drivers/xf86-video-dummy:0
   - x11-drivers/xf86-video-fbdev:0
   - x11-drivers/xf86-video-nouveau:0
   - x11-drivers/xf86-video-vbox:0
@@ -1424,5 +1439,3 @@ packages:
   - x11-themes/sound-theme-freedesktop:0
   - x11-themes/xcursor-themes:0
   - x11-wm/twm:0
-  - dev-lua/lua:5.3
-  - virtual/fortran
