--- a/portage-converter/layers/macaroni-funtoo-race17.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race17.yaml
@@ -75,12 +75,15 @@ packages:
   - app-editors/vim-core:0
   - app-editors/vim:0
   - app-emulation/containerd:0
+  - app-emulation/docker-buildx:2
   - app-emulation/docker-cli:0
-  - app-emulation/docker-proxy:0
+  - app-emulation/docker-compose:2
   - app-emulation/docker-slim:0
   - app-emulation/docker:0
   - app-emulation/firecracker-bin:0
+  - app-emulation/libcacard:0
   - app-emulation/libnvidia-container-bin:0
+  - app-emulation/lxc-templates:0
   - app-emulation/lxc:0
   - app-emulation/lxd:0
   - app-emulation/qemu:0
@@ -126,7 +129,6 @@ packages:
   - app-misc/neofetch:0
   - app-misc/pax-utils:0
   - app-misc/qtxdg-tools:0
-  - app-misc/jq:0
   - app-misc/screen:0
   - app-misc/scrub:0
   - app-misc/tmux:0
@@ -248,7 +250,9 @@ packages:
   - dev-db/sqlite:3
   - dev-db/tinycdb:0
   - dev-go/go-md2man:0
+  - dev-java/ant-core:0
   - dev-java/java-config:2
+  - dev-java/javatoolkit:0
   - dev-java/maven-bin:3.9
   - dev-java/openjdk-bin:11
   - dev-java/openjdk-bin:17
@@ -258,6 +262,7 @@ packages:
   - dev-java/openjdk-jre-bin:17
   - dev-java/openjdk-jre-bin:20
   - dev-java/openjdk-jre-bin:8
+  - dev-java/oracle-jdk-bin:1.8
   - dev-java/oracle-jdk-bin:17
   - dev-lang/fpc:0
   - dev-lang/go-bootstrap:0
@@ -397,6 +402,7 @@ packages:
   - dev-libs/mpc:0
   - dev-libs/mpfr:0
   - dev-libs/nettle:0
+  - dev-libs/newt:0
   - dev-libs/npth:0
   - dev-libs/nspr:0
   - dev-libs/nss:0
@@ -563,6 +569,7 @@ packages:
   - dev-python/PyQt-builder:0
   - dev-python/PyQt5-sip:0
   - dev-python/PyQt5:0
+  - dev-python/PyQtWebEngine:0
   - dev-python/PySocks:0
   - dev-python/aiodns:0
   - dev-python/aiofiles:0
@@ -600,6 +607,7 @@ packages:
   - dev-python/contextlib2:0
   - dev-python/cppy:0
   - dev-python/cryptography:0
+  - dev-python/cssutils:0
   - dev-python/curio:0
   - dev-python/cycler:0
   - dev-python/cython:0
@@ -672,6 +680,7 @@ packages:
   - dev-python/mwparserfromhell:0
   - dev-python/mysql-connector-python:0
   - dev-python/namespace-google:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/namespace-zope:0
   - dev-python/netaddr:0
   - dev-python/notify2:0
@@ -719,6 +728,7 @@ packages:
   - dev-python/pynacl:0
   - dev-python/pyopenssl:0
   - dev-python/pyparsing:0
+  - dev-python/pypeg2:0
   - dev-python/pyrsistent:0
   - dev-python/pyserial:0
   - dev-python/python-dateutil:0
@@ -764,6 +774,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -808,6 +819,7 @@ packages:
   - dev-qt/designer:5
   - dev-qt/linguist-tools:5
   - dev-qt/linguist:5
+  - dev-qt/qdbus:5
   - dev-qt/qtbluetooth:5
   - dev-qt/qtcharts:5
   - dev-qt/qtchooser:0
@@ -1569,6 +1581,7 @@ packages:
   - net-misc/rsync:0
   - net-misc/rygel:0
   - net-misc/socat:0
+  - net-misc/sshpass:0
   - net-misc/stunnel:0
   - net-misc/vconfig:0
   - net-misc/wget:0
@@ -1677,6 +1690,7 @@ packages:
   - sys-apps/usbutils:0
   - sys-apps/util-linux:0
   - sys-apps/which:0
+  - sys-apps/xinetd:0
   - sys-auth/elogind:0
   - sys-auth/nss-mdns:0
   - sys-auth/nss-myhostname:0
@@ -1705,7 +1719,7 @@ packages:
   - sys-devel/automake:1.16
   - sys-devel/bc:0
   - sys-devel/bin86:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/clang-common:0
   - sys-devel/clang-runtime:13.0.0
@@ -1719,6 +1733,7 @@ packages:
   - sys-devel/gettext:0
   - sys-devel/gnuconfig:0
   - sys-devel/libtool:2
+  - sys-devel/lld:0
   - sys-devel/llvm-common:0
   - sys-devel/llvm:13
   - sys-devel/m4:0
@@ -1748,6 +1763,7 @@ packages:
   - sys-fs/fuse-exfat:0
   - sys-fs/fuse:0
   - sys-fs/fuse:3
+  - sys-fs/growpart:0
   - sys-fs/lsscsi:0
   - sys-fs/lvm2:0
   - sys-fs/lxcfs:0
@@ -1836,6 +1852,7 @@ packages:
   - virtual/glu:0
   - virtual/gsasl:0
   - virtual/jack:0
+  - virtual/jdk:1.8
   - virtual/jdk:11
   - virtual/jdk:17
   - virtual/jdk:20
@@ -2139,12 +2156,14 @@ packages:
   - x11-terms/terminator:0
   - x11-terms/xterm:0
   - x11-themes/adwaita-icon-theme:0
+  - x11-themes/funtoo-gnome-shell-theme:0
   - x11-themes/gkrellm-themes:0
   - x11-themes/gnome-backgrounds:0
   - x11-themes/gnome-icon-theme-extras:0
   - x11-themes/gnome-themes-standard:0
   - x11-themes/gtk-engines-adwaita:0
   - x11-themes/gtk-engines-murrine:0
+  - x11-themes/gtk-engines:2
   - x11-themes/hicolor-icon-theme:0
   - x11-themes/lxqt-themes:0
   - x11-themes/macaroni-gnome-shell-theme:0
@@ -2153,7 +2172,3 @@ packages:
   - x11-themes/xcursor-themes:0
   - x11-wm/mutter:0
   - x11-wm/twm:0
-
-  - dev-python/cssutils:0
-  - dev-python/pypeg2:0
-  - dev-python/PyQtWebEngine:0
