--- a/portage-converter/layers/macaroni-funtoo-race2.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race2.yaml
@@ -91,6 +91,7 @@ packages:
   - dev-python/jinja:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/packaging:0
   - dev-python/ply:0
   - dev-python/pycparser:0
@@ -111,6 +112,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -165,7 +167,7 @@ packages:
   - sys-devel/autoconf:2.69
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/flex:0
   - sys-devel/gcc-config:0
