--- a/portage-converter/layers/macaroni-funtoo-race3.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race3.yaml
@@ -41,6 +41,8 @@ packages:
   - app-text/docbook-xml-dtd:4.3
   - app-text/docbook-xml-dtd:4.4
   - app-text/docbook-xml-dtd:4.5
+  - app-text/docbook-xml-simple-dtd:1.0
+  - app-text/docbook-xml-simple-dtd:4.1.2.5
   - app-text/docbook-xsl-stylesheets:0
   - app-text/manpager:0
   - app-text/opensp:0
@@ -130,6 +132,7 @@ packages:
   - dev-python/jinja:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/packaging:0
   - dev-python/ply:0
   - dev-python/pycparser:0
@@ -150,6 +153,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -233,7 +237,7 @@ packages:
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
   - sys-devel/bc:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/flex:0
   - sys-devel/gcc-config:0
