--- a/portage-converter/layers/macaroni-funtoo-race7.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race7.yaml
@@ -97,7 +97,6 @@ packages:
   - dev-libs/libgcrypt:0
   - dev-libs/libgpg-error:0
   - dev-libs/libgudev:0
-  - dev-libs/libgusb:0
   - dev-libs/libksba:0
   - dev-libs/libltdl:0
   - dev-libs/libmspack:0
@@ -174,6 +173,7 @@ packages:
   - dev-python/mako:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/packaging:0
   - dev-python/ply:0
   - dev-python/pycparser:0
@@ -194,6 +194,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -274,6 +275,7 @@ packages:
   - media-fonts/freefont:0
   - media-fonts/freefonts:0
   - media-fonts/fs-fonts:0
+  - media-fonts/hack:0
   - media-fonts/hunkyfonts:0
   - media-fonts/intlfonts:0
   - media-fonts/ipamonafont:0
@@ -284,9 +286,12 @@ packages:
   - media-fonts/mikachan-font-ttf:0
   - media-fonts/monafont:0
   - media-fonts/nepali-fonts:0
+  - media-fonts/noto-cjk:0
+  - media-fonts/noto:0
   - media-fonts/proggy-fonts:0
   - media-fonts/sgi-fonts:0
   - media-fonts/stix-fonts:0
+  - media-fonts/symbola:0
   - media-fonts/takao-fonts:0
   - media-fonts/tengwar-fonts:0
   - media-fonts/terminus-font:0
@@ -395,7 +400,7 @@ packages:
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
   - sys-devel/bc:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/clang-common:0
   - sys-devel/clang-runtime:13.0.0
@@ -406,6 +411,7 @@ packages:
   - sys-devel/gettext:0
   - sys-devel/gnuconfig:0
   - sys-devel/libtool:2
+  - sys-devel/lld:0
   - sys-devel/llvm-common:0
   - sys-devel/llvm:13
   - sys-devel/m4:0
@@ -542,7 +548,6 @@ packages:
   - x11-libs/libXv:0
   - x11-libs/libXvMC:0
   - x11-libs/libXxf86vm:0
-  - x11-libs/libXtst:0
   - x11-libs/libdrm:0
   - x11-libs/libfontenc:0
   - x11-libs/libpciaccess:0
