--- a/portage-converter/layers/macaroni-funtoo-race9.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race9.yaml
@@ -84,6 +84,7 @@ packages:
   - app-text/xmlto:0
   - app-text/yelp-tools:0
   - app-vim/gentoo-syntax:0
+  - dev-cpp/cairomm:0
   - dev-cpp/cairomm:1
   - dev-cpp/tbb:0
   - dev-db/sqlite:3
@@ -139,6 +140,7 @@ packages:
   - dev-libs/libcroco:0.6
   - dev-libs/libdaemon:0
   - dev-libs/libdnet:0
+  - dev-libs/libedit:0
   - dev-libs/libev:0
   - dev-libs/libevdev:0
   - dev-libs/libevent:0
@@ -175,9 +177,11 @@ packages:
   - dev-libs/mpc:0
   - dev-libs/mpfr:0
   - dev-libs/nettle:0
+  - dev-libs/newt:0
   - dev-libs/npth:0
   - dev-libs/nspr:0
   - dev-libs/nss:0
+  - dev-libs/oniguruma:0
   - dev-libs/openssl:0
   - dev-libs/popt:0
   - dev-libs/snowball-stemmer:0
@@ -190,6 +194,7 @@ packages:
   - dev-libs/xxhash:0
   - dev-lua/LuaBitOp:0
   - dev-lua/lpeg:0
+  - dev-lua/lua:5.3
   - dev-lua/luaexpat:0
   - dev-lua/luajson:0
   - dev-lua/luasocket:0
@@ -248,6 +253,7 @@ packages:
   - dev-python/mako:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/packaging:0
   - dev-python/ply:0
   - dev-python/pycairo:0
@@ -270,6 +276,7 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
@@ -593,7 +600,7 @@ packages:
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
   - sys-devel/bc:0
-  - sys-devel/binutils:2.39
+  - sys-devel/binutils:2.40
   - sys-devel/bison:0
   - sys-devel/clang-common:0
   - sys-devel/clang-runtime:13.0.0
@@ -605,6 +612,7 @@ packages:
   - sys-devel/gettext:0
   - sys-devel/gnuconfig:0
   - sys-devel/libtool:2
+  - sys-devel/lld:0
   - sys-devel/llvm-common:0
   - sys-devel/llvm:13
   - sys-devel/m4:0
@@ -621,6 +629,7 @@ packages:
   - sys-fs/fuse-exfat:0
   - sys-fs/fuse:0
   - sys-fs/fuse:3
+  - sys-fs/growpart:0
   - sys-fs/lsscsi:0
   - sys-fs/lvm2:0
   - sys-fs/mdadm:0
@@ -656,6 +665,7 @@ packages:
   - sys-libs/ncurses:0
   - sys-libs/pam:0
   - sys-libs/readline:0
+  - sys-libs/slang:0
   - sys-libs/talloc:0
   - sys-libs/timezone-data:0
   - sys-libs/zlib:0
@@ -671,6 +681,7 @@ packages:
   - virtual/dev-manager:0
   - virtual/editor:0
   - virtual/eject:0
+  - virtual/fortran:0
   - virtual/glu:0
   - virtual/jpeg:0
   - virtual/krb5:0
@@ -797,6 +808,7 @@ packages:
   - x11-drivers/xf86-input-wacom:0
   - x11-drivers/xf86-video-amdgpu:0
   - x11-drivers/xf86-video-ati:0
+  - x11-drivers/xf86-video-dummy:0
   - x11-drivers/xf86-video-fbdev:0
   - x11-drivers/xf86-video-nouveau:0
   - x11-drivers/xf86-video-vbox:0
