dev-lang/tk: Bump v.8.6.9.1+1

--- a/packages/atoms/base-gtk/dev-lang/tk/definition.yaml
+++ b/packages/atoms/base-gtk/dev-lang/tk/definition.yaml
@@ -1,19 +1,19 @@
 name: tk
-version: 8.6.9.1
+version: 8.6.9.1+1
 category: dev-lang
 use_flags:
 - -aqua
 - -prefix
 - -test
-- -truetype
 - -xscreensaver
+- truetype
 requires:
 - name: tcl
   version: '>=0'
   category: dev-lang
-- name: fontconfig
+- name: libXft
   version: '>=0'
-  category: media-libs-1.0
+  category: x11-libs
 - name: libXt
   version: '>=0'
   category: x11-libs
