x11-libs-3.0/gtksourceview: Update bdeps

--- a/packages/atoms/gnome-extra/x11-libs-3.0/gtksourceview/build.yaml
+++ b/packages/atoms/gnome-extra/x11-libs-3.0/gtksourceview/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race16
+- name: libgit2-glib
   version: '>=0'
-  category: seed
+  category: dev-libs
