--- a/packages/atoms/gnome-extra/dev-vcs/gitg/build.yaml
+++ b/packages/atoms/gnome-extra/dev-vcs/gitg/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# Temporary
+- >-
+  cp gitg-3.32.1.ebuild /var/git/meta-repo/kits/gnome-kit/dev-vcs/gitg/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
