toolchain/funtoo: Update rdeps

--- a/packages/toolchain/funtoo/definition.yaml
+++ b/packages/toolchain/funtoo/definition.yaml
@@ -9,3 +9,6 @@ requires:
   - name: metatools
     category: sys-apps
     version: '>=0'
+  - name: ramdisk
+    category: sys-apps
+    version: '>=0'
