toolchain/tools: Update rdeps

--- a/packages/toolchain/tools/definition.yaml
+++ b/packages/toolchain/tools/definition.yaml
@@ -51,6 +51,9 @@ requires:
   - name: tp_smapi
     category: app-laptop
     version: '>=0'
+  - name: asciinema
+    category: app-misc
+    version: '>=0'
   - name: mkcert
     category: app-misc
     version: '>=0'
@@ -106,6 +109,9 @@ requires:
     category: media-sound-0.9
     version: '>=0'
   - name: rrdtool
+    category: net-analyzer
+    version: '>=0'
+  - name: speedtest-cli
     category: net-analyzer
     version: '>=0'
   - name: lrzsz
