toolchain/gnome-extra: Update rdeps

--- a/packages/toolchain/gnome-extra/definition.yaml
+++ b/packages/toolchain/gnome-extra/definition.yaml
@@ -57,11 +57,17 @@ requires:
   - name: libgit2
     category: dev-libs
     version: '>=0'
+  - name: libgit2-glib
+    category: dev-libs
+    version: '>=0'
   - name: libmanette
     category: dev-libs
     version: '>=0'
   - name: meld
     category: dev-util
+    version: '>=0'
+  - name: gitg
+    category: dev-vcs
     version: '>=0'
   - name: gconf
     category: gnome-base-2
