toolchain/desktop: Update rdeps

--- a/packages/toolchain/desktop/definition.yaml
+++ b/packages/toolchain/desktop/definition.yaml
@@ -51,6 +51,9 @@ requires:
   - name: blender-bin
     category: media-gfx
     version: '>=0'
+  - name: inkscape
+    category: media-gfx
+    version: '>=0'
   - name: sane-backends
     category: media-gfx
     version: '>=0'
