toolchain/browser: Update rdeps

--- a/packages/toolchain/browsers/definition.yaml
+++ b/packages/toolchain/browsers/definition.yaml
@@ -3,3 +3,51 @@ name: browsers
 version: "1"
 description: "Virtual package to install portage meta data of the browsers packages"
 requires:
+  - name: cbindgen
+    category: dev-util
+    version: '>=0'
+  - name: chrome-gnome-shell
+    category: gnome-extra
+    version: '>=0'
+  - name: brave-bin
+    category: www-client
+    version: '>=0'
+  - name: firefox
+    category: www-client
+    version: '>=0'
+  - name: firefox-beta-bin
+    category: www-client
+    version: '>=0'
+  - name: firefox-bin
+    category: www-client
+    version: '>=0'
+  - name: google-chrome
+    category: www-client
+    version: '>=0'
+  - name: google-chrome-beta
+    category: www-client
+    version: '>=0'
+  - name: google-chrome-unstable
+    category: www-client
+    version: '>=0'
+  - name: opera
+    category: www-client
+    version: '>=0'
+  - name: qutebrowser
+    category: www-client
+    version: '>=0'
+  - name: vivaldi
+    category: www-client
+    version: '>=0'
+  - name: vivaldi-snapshot
+    category: www-client
+    version: '>=0'
+  - name: chrome-binary-plugins
+    category: www-plugins-beta
+    version: '>=0'
+  - name: chrome-binary-plugins
+    category: www-plugins-stable
+    version: '>=0'
+  - name: chrome-binary-plugins
+    category: www-plugins-unstable
+    version: '>=0'
