.goreleaser.yml: Prepare tag

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,20 +1,17 @@
-project_name: Funtoo Macaroni
+project_name: Macaroni Funtoo
 build:
   skip: true
 release:
   header: |
-    ## Funtoo Macaroni {{ .Tag }}!
+    ## Macaroni OS {{ .Tag }}!
 
     A new release of Phoenix branch is out!
 
-    This release is a maintenance release with new Kernels.
+    This a `dist-upgrade` release that permits to upgrade from
+    Funtoo 1.4 to Funtoo Next.
 
-    In evidence:
-
-      * LXD 5.14
-      * ZFS 2.1.12
-      * Rust 1.70.0
-      * Gnome Maps fixed
+    Follow the steps describe in our [bloc](https://www.macaronios.org/blog/phoenix-23.11/)
+    to upgrade your system!
 
     See the above list for all upgrade details.
 
