iso: Fix llvm package to install

--- a/iso/funtoo-dev.yaml
+++ b/iso/funtoo-dev.yaml
@@ -135,7 +135,7 @@ packages:
 
   # Needed by /usr/lib64/dri/*.so
   - sys-devel/llvm-common
-  - sys-devel-11/llvm
+  - llvm
 
 # equery belongs libstd-008055cc7d873802.so (fix ldconfig)
 # * Searching for libstd-008055cc7d873802.so ... 
