--- a/iso/funtoo-gnome-devel.yaml
+++ b/iso/funtoo-gnome-devel.yaml
@@ -139,7 +139,7 @@ packages:
 
   # Needed by /usr/lib64/dri/*.so
   - sys-devel/llvm-common
-  - sys-devel-11/llvm
+  - llvm
 
   - app-admin/ego
   - app-portage/gentoolkit
