--- a/iso/funtoo-lxqt.yaml
+++ b/iso/funtoo-lxqt.yaml
@@ -124,7 +124,7 @@ packages:
 
   # Needed by /usr/lib64/dri/*.so
   - sys-devel/llvm-common
-  - sys-devel-11/llvm
+  - llvm
 
   # Dependency of calamares
   - kde-frameworks-5/plasma
