--- a/iso/funtoo-server.yaml
+++ b/iso/funtoo-server.yaml
@@ -129,7 +129,7 @@ packages:
 
   # Needed by /usr/lib64/dri/*.so
   - sys-devel/llvm-common
-  - sys-devel-11/llvm
+  - llvm
 
   # TODO: this must be a rdep of dbus
   - sys-auth/elogind
