--- a/iso/funtoo-xfce.yaml
+++ b/iso/funtoo-xfce.yaml
@@ -131,7 +131,7 @@ packages:
 
   # Needed by /usr/lib64/dri/*.so
   - sys-devel/llvm-common
-  - sys-devel-11/llvm
+  - lvm
 
 # equery belongs libstd-008055cc7d873802.so (fix ldconfig)
 # * Searching for libstd-008055cc7d873802.so ... 
