iso: Add pinentry-gnome package

--- a/iso/funtoo-gnome-devel.yaml
+++ b/iso/funtoo-gnome-devel.yaml
@@ -158,6 +158,8 @@ packages:
   - gnome-extra/gnome-tweaks
   - sys-apps/man-pages
 
+  - pinentry-gnome
+
   uefi:
   - live/systemd-boot
   - system/macaroni-live-boot
