--- a/iso/funtoo-live.yaml
+++ b/iso/funtoo-live.yaml
@@ -200,6 +200,8 @@ packages:
   - dev-util/meld
   - sys-apps/man-pages
 
+  - pinentry-gnome
+
   uefi:
   - live/systemd-boot
   - system/macaroni-live-boot
