--- a/iso/funtoo.yaml
+++ b/iso/funtoo.yaml
@@ -148,6 +148,8 @@ packages:
   - gnome-extra/gnome-calculator
   - gnome-extra/gnome-tweaks
 
+  - pinentry-gnome
+
   uefi:
   - live/systemd-boot
   - system/macaroni-live-boot
