macaroni/live-setup-core: Add gentoo-functions as rdep

--- a/packages/macaroni/live-setup-core/definition.yaml
+++ b/packages/macaroni/live-setup-core/definition.yaml
@@ -41,3 +41,6 @@ requires:
 - name: eselect-lib-bin-symlink
   version: '>=0'
   category: app-eselect
+- name: gentoo-functions
+  version: '>=0'
+  category: sys-apps
