iso: Add gentoo-functions as temporary fix

--- a/iso/funtoo-dev.yaml
+++ b/iso/funtoo-dev.yaml
@@ -137,11 +137,8 @@ packages:
   - sys-devel/llvm-common
   - llvm
 
-# equery belongs libstd-008055cc7d873802.so (fix ldconfig)
-# * Searching for libstd-008055cc7d873802.so ... 
-#dev-lang/rust-bin-1.55.0 (/opt/rust-bin-1.55.0/lib/libstd-008055cc7d873802.so)
-#dev-lang/rust-bin-1.55.0 (/opt/rust-bin-1.55.0/lib/rustlib/x86_64-unknown-linux-gnu/lib/libstd-008055cc7d873802.so)
-  # rust-bin 
+  # Temporary until next release
+  - sys-apps/gentoo-functions
 
   uefi:
   - live/systemd-boot
