--- a/iso/funtoo-gnome-devel.yaml
+++ b/iso/funtoo-gnome-devel.yaml
@@ -160,6 +160,9 @@ packages:
 
   - pinentry-gnome
 
+  # Temporary until next release
+  - sys-apps/gentoo-functions
+
   uefi:
   - live/systemd-boot
   - system/macaroni-live-boot
