--- a/iso/funtoo-live.yaml
+++ b/iso/funtoo-live.yaml
@@ -202,6 +202,8 @@ packages:
 
   - pinentry-gnome
 
+  # Temporary until next release
+  - sys-apps/gentoo-functions
   uefi:
   - live/systemd-boot
   - system/macaroni-live-boot
