--- a/iso/funtoo-lxqt.yaml
+++ b/iso/funtoo-lxqt.yaml
@@ -148,6 +148,8 @@ packages:
   # LXQT need a wm. This could be replaced by openbox
   - xfce-base/xfwm4
 
+  # Temporary until next release
+  - sys-apps/gentoo-functions
   uefi:
   - live/systemd-boot
   - system/macaroni-live-boot
