--- a/iso/funtoo-server.yaml
+++ b/iso/funtoo-server.yaml
@@ -142,6 +142,8 @@ packages:
   - app-emulation/lxd
   - net-misc/bridge-utils
 
+  # Temporary until next release
+  - sys-apps/gentoo-functions
 
   uefi:
   - live/systemd-boot
