--- a/iso/funtoo-xfce.yaml
+++ b/iso/funtoo-xfce.yaml
@@ -144,6 +144,8 @@ packages:
 
   - net-libs/libproxy
 
+  # Temporary until next release
+  - sys-apps/gentoo-functions
   uefi:
   - live/systemd-boot
   - system/macaroni-live-boot
