--- a/iso/funtoo-i3.yaml
+++ b/iso/funtoo-i3.yaml
@@ -137,6 +137,9 @@ packages:
 
   - net-libs/libproxy
 
+  # Temporary until next release
+  - sys-apps/gentoo-functions
+
   uefi:
   - live/systemd-boot
   - system/macaroni-live-boot
