--- a/iso/funtoo-xfce-devel.yaml
+++ b/iso/funtoo-xfce-devel.yaml
@@ -143,6 +143,8 @@ packages:
 
   - net-libs/libproxy
 
+  # Temporary until next release
+  - sys-apps/gentoo-functions
   uefi:
   - live/systemd-boot
   - system/macaroni-live-boot
