--- a/iso/funtoo.yaml
+++ b/iso/funtoo.yaml
@@ -150,6 +150,8 @@ packages:
 
   - pinentry-gnome
 
+  # Temporary until next release
+  - sys-apps/gentoo-functions
   uefi:
   - live/systemd-boot
   - system/macaroni-live-boot
