--- a/iso/funtoo-i3.yaml
+++ b/iso/funtoo-i3.yaml
@@ -130,7 +130,7 @@ packages:
 
   # Needed by /usr/lib64/dri/*.so
   - sys-devel/llvm-common
-  - lvm
+  - llvm
 
   # Dependency of calamares
   - kde-frameworks-5/plasma
