portage-converter/base-gtk: Add dev-lang/tk specs (to enable truetype)

--- a/portage-converter/base-gtk.yml
+++ b/portage-converter/base-gtk.yml
@@ -447,6 +447,16 @@ artefacts:
     - net-libs/glib-networking
     - dev-libs/json-glib
 
+- tree: packages/atoms/base-gtk
+  uses:
+    disabled:
+    - aqua
+    - prefix
+    - test
+    - xscreensaver
+  packages:
+    - dev-lang/tk
+
 include_layers:
 - layers/macaroni-funtoo-race6.yaml
 
