--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -10,12 +10,14 @@ ENV USER=root
 
 RUN [ \
   "/usr/bin/luet", "install", "-y", "--force", "--sync-repos", \
+  "--cleanup", "--purge-repos", \
   "repository/mottainai-dev", \
   "repository/macaroni-commons-dev", \
   "repository/macaroni-phoenix-dev"]
 
 RUN [ \
   "/usr/bin/luet", "install", "-y", "--force", "--sync-repos", \
+  "--cleanup", "--purge-repos", \
   "--skip-config-protect", \
   "system/entities", \
   "system/luet-geaaru-testing", \
