toolchain/base-fs: Update rdeps

--- a/packages/toolchain/base-fs/definition.yaml
+++ b/packages/toolchain/base-fs/definition.yaml
@@ -30,6 +30,9 @@ requires:
   - name: sshfs
     category: net-fs
     version: '>=0'
+  - name: dmapi
+    category: sys-apps
+    version: '>=0'
   - name: parted
     category: sys-block
     version: '>=0'
@@ -42,10 +45,19 @@ requires:
   - name: cryptsetup
     category: sys-fs
     version: '>=0'
+  - name: diskdev_cmds
+    category: sys-fs
+    version: '>=0'
+  - name: dmraid
+    category: sys-fs
+    version: '>=0'
   - name: encfs
     category: sys-fs
     version: '>=0'
   - name: exfat-utils
+    category: sys-fs
+    version: '>=0'
+  - name: f2fs-tools
     category: sys-fs
     version: '>=0'
   - name: fuse
@@ -60,7 +72,16 @@ requires:
   - name: growpart
     category: sys-fs
     version: '>=0'
+  - name: hfsutils
+    category: sys-fs
+    version: '>=0'
+  - name: jfsutils
+    category: sys-fs
+    version: '>=0'
   - name: lsscsi
+    category: sys-fs
+    version: '>=0'
+  - name: mtools
     category: sys-fs
     version: '>=0'
   - name: ntfs3g
@@ -73,6 +94,12 @@ requires:
     category: sys-fs
     version: '>=0'
   - name: squashfs-tools
+    category: sys-fs
+    version: '>=0'
+  - name: udftools
+    category: sys-fs
+    version: '>=0'
+  - name: xfsdump
     category: sys-fs
     version: '>=0'
   - name: zfs
