app-emulation/containerd: Add net-misc/cni-plugins as rdep

--- a/packages/atoms/emulation/app-emulation/containerd/definition.yaml
+++ b/packages/atoms/emulation/app-emulation/containerd/definition.yaml
@@ -11,6 +11,9 @@ requires:
 - name: btrfs-progs
   version: '>=0'
   category: sys-fs
+- name: cni-plugins
+  version: '>=0'
+  category: net-misc
 annotations:
   subsets:
     rules:
