app-metrics/node_exporter-bin: Set log dir owner on finalize

--- a/packages/atoms/telemetry/app-metrics/node_exporter-bin/finalize.yaml
+++ b/packages/atoms/telemetry/app-metrics/node_exporter-bin/finalize.yaml
@@ -2,4 +2,5 @@ shell:
 - /bin/bash
 - -c
 install:
-- entities merge --specs-dir /usr/share/macaroni/entities/ -e node_exporter
+- entities merge --specs-dir /usr/share/macaroni/entities/ -e node_exporter && chown
+  node_exporter:node_exporter /var/log/node_exporter/
