--- a/portage-converter/telemetry.yaml
+++ b/portage-converter/telemetry.yaml
@@ -135,7 +135,8 @@ artefacts:
     install:
       - >-
         entities merge --specs-dir /usr/share/macaroni/entities/
-        -e node_exporter
+        -e node_exporter &&
+        chown node_exporter:node_exporter /var/log/node_exporter/
 
 - tree: packages/atoms/telemetry
   uses:
