dev-qt-5/qtspeech: Bump v.5.15.2+2

--- a/packages/atoms/base-kde5/dev-qt-5/qtspeech/definition.yaml
+++ b/packages/atoms/base-kde5/dev-qt-5/qtspeech/definition.yaml
@@ -1,9 +1,9 @@
 name: qtspeech
-version: 5.15.2+1
+version: 5.15.2+2
 category: dev-qt-5
 use_flags:
-- -alsa
 - -test
+- alsa
 - flite
 requires:
 - name: speech-dispatcher
