dev-qt-5/qtspeech: Bump v.5.15.2+3

--- a/packages/atoms/base-kde5/dev-qt-5/qtspeech/build.yaml
+++ b/packages/atoms/base-kde5/dev-qt-5/qtspeech/build.yaml
@@ -1,7 +1,7 @@
 prelude:
 # Temporary. At the moment we haven't a flite-2. Trying to use flite 1.4
 - >-
-  sed -e 's|app-accessibility/flite-2\[alsa.*|app-accessibility/flite|g'
+  sed -e 's|>=app-accessibility/flite-2\[alsa.*|app-accessibility/flite|g'
   /var/git/meta-repo/kits/qt-kit/dev-qt/qtspeech/qtspeech-5.15.2_p20231004.ebuild
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
