--- a/packages/macaroni/gpgme/collection.yaml
+++ b/packages/macaroni/gpgme/collection.yaml
@@ -1,6 +1,6 @@
 gpgme_pkg: &package
   category: app-crypt-1
-  version: 1.18.0
+  version: 1.18.0+1
   uri:
   - https://www.gnupg.org/related_software/gpgme
   license: GPL-2 LGPL-2.1
@@ -30,8 +30,3 @@ packages:
     name: "gpgme-qt"
     description: GnuPG Made Easy is a library for making GnuPG easier to use. Qt tools.
     includes:
-      - ^/usr/include/QGpgME/.*
-      - ^/usr/include/qgpgme/.*
-      - ^/usr/lib64/cmake/QGpgme/QGpgmeConfig.cmake
-      - ^/usr/lib64/cmake/QGpgme/QGpgmeConfigVersion.cmake
-      - ^/usr/lib64/libqgpgme.*
