--- a/packages/atoms/base-kde5/kde-apps-5/libkleo/build.yaml
+++ b/packages/atoms/base-kde5/kde-apps-5/libkleo/build.yaml
@@ -1,4 +1,11 @@
 prelude:
+#- >-
+#  luet repo update &&
+#  luet i -y gpgme-qt &&
+#  luet cleanup --purge-repos &&
+#  sed -e 's|>=app-crypt/gpgme-1.16.0\[cxx.*|app-crypt/gpgme|g' -i /var/git/meta-repo/kits/kde-kit/kde-apps/libkleo/libkleo-22.08.1.ebuild
+- >-
+  USE="qt5" emerge  app-crypt/gpgme --nodeps -j
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
