--- a/packages/atoms/base-kde5/kde-apps-5/akonadi/definition.yaml
+++ b/packages/atoms/base-kde5/kde-apps-5/akonadi/definition.yaml
@@ -1,14 +1,15 @@
 name: akonadi
-version: 22.08.1
+version: 22.08.1+1
 category: kde-apps-5
 use_flags:
+- -mariadb
 - -test
 - kaccounts
-- mariadb
 - postgres
 - prefix
 - sqlite
 - xml
+- tools
 requires:
 - name: xz-utils
   version: '>=0'
@@ -26,6 +27,9 @@ requires:
   version: '>=0'
   category: kde-apps-5
 - name: kcrash
+  version: '>=0'
+  category: kde-frameworks-5
+- name: kio
   version: '>=0'
   category: kde-frameworks-5
 - name: kitemmodels
