kde-plasma-5/plasma-desktop: Bump v.5.25.5+1

--- a/packages/atoms/base-kde5/kde-plasma-5/plasma-desktop/definition.yaml
+++ b/packages/atoms/base-kde5/kde-plasma-5/plasma-desktop/definition.yaml
@@ -1,7 +1,8 @@
 name: plasma-desktop
-version: 5.25.5
+version: 5.25.5+1
 category: kde-plasma-5
 use_flags:
+- -scim
 - -test
 - emoji
 - handbook
@@ -9,7 +10,6 @@ use_flags:
 - kaccounts
 - policykit
 - prefix
-- scim
 - semantic-desktop
 requires:
 - name: ibus
