--- a/packages/virtual/base/finalize.yaml
+++ b/packages/virtual/base/finalize.yaml
@@ -17,7 +17,16 @@ install:
 - if [ ! -e /etc/group ] ; then touch /etc/group ; fi
 - if [ ! -e /etc/gshadow ] ; then touch /etc/gshadow ; fi
 - if [ ! -e /etc/modules-load.d ] ; then mkdir /etc/modules-load.d ; fi
-- chmod a+rx /var
+- chmod a+rx /vaa
+- |
+  export EROOT=${EROOT:-/} ; \
+  export GCC_VERSION={{ ( index .Values.labels "gcc_version" ) }} ; \
+  mkdir -p ${EROOT}etc/ld.so.conf.d || true ; \
+  echo "
+  /usr/lib/gcc/x86_64-pc-linux-gnu/${GCC_VERSION}/32
+  /usr/lib/gcc/x86_64-pc-linux-gnu/${GCC_VERSION}
+  " > ${EROOT}etc/ld.so.conf.d/05gcc-x86_64-pc-linux-gnu.conf
+
 - >-
   eval 'mkdir /tmp || true' &&
   chmod a+rwx /tmp
