base-python: Update build order

--- a/packages/atoms/base-python/dev-python/setuptools_scm/build.yaml
+++ b/packages/atoms/base-python/dev-python/setuptools_scm/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libffi
+- name: eselect-rust
   version: '>=0'
-  category: virtual
+  category: app-eselect
