--- a/packages/atoms/base-python/dev-python/setuptools-rust/build.yaml
+++ b/packages/atoms/base-python/dev-python/setuptools-rust/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: setuptools_scm
+- name: typing-extensions
   version: '>=0'
   category: dev-python
