--- a/packages/atoms/base-python/dev-python/zipp/build.yaml
+++ b/packages/atoms/base-python/dev-python/zipp/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race1
+- name: setuptools_scm
   version: '>=0'
-  category: seed
+  category: dev-python
