atoms/base-python: Review build order

--- a/packages/atoms/base-python/dev-python/wheel/build.yaml
+++ b/packages/atoms/base-python/dev-python/wheel/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: flit_core
+- name: importlib_metadata
   version: '>=0'
   category: dev-python
