--- a/packages/atoms/base-python/dev-python/packaging/build.yaml
+++ b/packages/atoms/base-python/dev-python/packaging/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: flit_core
+- name: tomli
   version: '>=0'
   category: dev-python
