--- a/packages/atoms/base-python/dev-python/ply/build.yaml
+++ b/packages/atoms/base-python/dev-python/ply/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: wheel
+- name: pyparsing
   version: '>=0'
   category: dev-python
